# mcp-server-tools

./: README.md  pyproject.toml
scripts/: dev.ps1  dev.sh
src/add_mcp_server/: __init__.py  app_factory.py  config.py  server.py  ui_html.py  ui_js.py
src/add_mcp_server/tools/: academic_research_super.py  add.py  call_llm.py  direct_upload.py  git_github.py  git_local.py  gitbook.py  github_direct.py  github_simple.py  github_upload.py  multiply.py  pdf2text.py  pdf_search.py  reddit_intelligence.py  script_executor.py  sqlite_db.py  square.py  universal_doc_scraper.py
src/add_mcp_server/tools/github_client/: __init__.py  actions.py  base.py  issues.py  orgs.py  pulls.py  repos.py  users.py
